Update on Overleaf.

--- a/chapterEMEPModelUpdates.tex
+++ b/chapterEMEPModelUpdates.tex
@@ -487,7 +487,7 @@ The Local Fractions method \citep{wind-2020} is a framework that allows to track
 Since last year, the range of applications of the Local Fractions has been extended.
 
 The sources can be defined by either a list of countries or group of countries, as small squares surrounding the receptor grid (with user defined range and square sizes), or as regions defined as "masks" given in a NetCDF file.
-Wet and dry deposition (separately) per source country can now be also computed.
+Wet and dry deposition (separately) per source country can now also be computed.
 
 
 
