--- a/chapterEmis2019.tex
+++ b/chapterEmis2019.tex
@@ -2,7 +2,8 @@
 \label{ch:emis2019}
 
 
-{\bf{Bradley Matthews, Katarina Mareckova, Sabine Schindlbacher, Bernhard Ullrich, Robert Wankm\"uller and all CEIP/Umweltbundesamt Austria, Jeroen Kuenen (TNO)}}
+{\bf{Bradley Matthews, Katarina Mareckova, Sabine Schindlbacher, Bernhard Ullrich, \\
+Robert Wankm\"uller and all CEIP/Umweltbundesamt Austria, Jeroen Kuenen (TNO)}}
 \vspace{30pt}
 
 In addition to meteorological variability, changes in the emissions
@@ -32,7 +33,7 @@ PM\footnote{``Particulate matter'' (PM) is an air pollutant
 (i) ``PM$_{2.5}$'', or particles with an aerodynamic diameter equal to or
   less than 2.5 micrometers ($\mu$m);\\ 
 (ii) ``PM$_{10}$'', or particles with an aerodynamic diameter equal to or
-  less than 10 ($\mu$m).} and voluntary BC) and associated activity data. Projection data, gridded data and information on large point sources (LPS) 
+  less than 10 $\mu$m.} and voluntary BC) and associated activity data. Projection data, gridded data and information on large point sources (LPS) 
 have to be reported to the EMEP Centre on Emission Inventories and Projections (CEIP) every four years.
 
 \section{Reporting of emission inventories in 2021}
