--- a/chapterIntro.tex
+++ b/chapterIntro.tex
@@ -458,7 +458,7 @@ Philosophical Transactions of the Royal Society A: Mathematical, Physical and En
 DOI: 10.1098/rsta.2019.0331
 
 \item[]
-Blechschmidt, Anne-Marlene; Arteta, Joaquim; Coman, Adriana; Curier, Lyana; Eskes, Henk; Foret, Gilles; Gielen, Clio; Hendrick, François; Marécal, Virginie; Meleux, Frédérik; Parmentier, Jonathan; Peters, Enno; Pinardi, Gaia; Piters, Ankie J.M.; Plu, Matthieu; Richter, Andreas; Segers, Arjo; Sofiev, Mikhail; Valdebenito, Alvaro; Van Roozendael, Michel; Vira, Julius; Vlemmix, Tim; Burrows, John P..
+Blechschmidt, Anne-Marlene; Arteta, Joaquim; Coman, Adriana; Curier, Lyana; Eskes, Henk; Foret, Gilles; Gielen, Clio; Hendrick, François; Marécal, Virginie; Meleux, Frédérik; Parmentier, Jonath-an; Peters, Enno; Pinardi, Gaia; Piters, Ankie J.M.; Plu, Matthieu; Richter, Andreas; Segers, Arjo; Sofiev, Mikhail; Valdebenito, Alvaro; Van Roozendael, Michel; Vira, Julius; Vlemmix, Tim; Burrows, John P..
 Comparison of tropospheric NO2 columns from MAX-DOAS retrievals and regional air quality model simulations.
 Atmospheric Chemistry and Physics ; 2020; 20 p. 2795-2823
 DOI: 10.5194/acp-20-2795-2020 
@@ -524,7 +524,8 @@ Geoscientific Model Development ; 2020; 13.(4) ; p. 1787-1807
 DOI: 10.5194/gmd-13-1787-2020 
 
 \item[]
-Simpson, David; Bergström, Robert; Briolat, Alan; Imhof, Hannah; Johansson, John; Priestley, Michael; Valdebenito Bustamante, Alvaro Moises.
+Simpson, David; Bergström, Robert; Briolat, Alan; Imhof, Hannah; Johansson, John; Priestley, Micha-el;
+Valdebenito Bustamante, Alvaro Moises.
 GenChem v1.0 – a chemical pre-processing and testing system for atmospheric modelling.
 Geoscientific Model Development 2020 ; 13. p. 6447-6465
 DOI: 10.5194/gmd-13-6447-2020 
@@ -551,7 +552,7 @@ DOI: 10.5194/gmd-13-1623-2020	Projects: NFR 267734 (AirQuip)
 Zhang, Yuqiang; West, Jason; Emmons, Louisa K.; Flemming, Johannes; Jonson, Jan Eiof; Tronstad Lund, Marianne; Sekija, Takashi; Sudo, Kengo; Gaudel, Audrey; Chang, Kai-Lan; Nédélec, Philippe; Thouret, Valérie.
 Contributions of World Regions to the Global Tropospheric Ozone Burden Change from 1980 to 2010.
 Geophysical Research Letters 2020; 48 (1)
-DOI: 10.1029/2020GL089184
+DOI: 10.1029/2020 GL089184
 
 \end{list}
 
