--- a/chapterStatus2019.tex
+++ b/chapterStatus2019.tex
@@ -54,7 +54,7 @@ Particularly the dry conditions in east Europe and South Caucasus is shown in Fi
 
 For April through September  Figure~\ref{fig:prec-avMET}~a) shows that Europe in general had much less precipitation in 2019 than the 2000-2018 average, with the exception of UK, Ireland, southern Norway and the central Mediterranean countries. In Latvia and Belarus, April was the driest month on record, and also European Russia, Germany, Czechia and northern parts of Poland was extremely dry. In spring, parts of France and the Iberian Peninsula was much drier than normal, but wet in Scandinavia, Italy and the northern Balkans, and Slovenia reported its wettest May on record. Summer was overall very dry in most of Europe, except for the eastern Mediterranean, the United Kingdom and southern Norway. Autumn continued with dry conditions in eastern Europe, Turkey and southwestern Iberia, while central and western Europe received above-normal precipitation. Eastern Norway was extremely wet while western Norway was very dry. Denmark reported its wettest autumn on record and in southeastern Spain local extreme precipitation totals due to heavy rain were reported for September.
 
-As shown in Figure~\ref{fig:prec-avMET}~b) the 2019 winter months (January-March and October-December) precipitation were wetter than the 2000-2018 average in most of Europe, except drier conditions in western Norway, southern Iberian Peninsula, southeastern Europe, southern European Russia, South Caucasus, Kyrgyz Republic
+As shown in Figure~\ref{fig:prec-avMET}~b) the 2019 winter months (January-March and October-Decemb-er) precipitation were wetter than the 2000-2018 average in most of Europe, except drier conditions in western Norway, southern Iberian Peninsula, southeastern Europe, southern European Russia, South Caucasus, Kyrgyz Republic
 and Tajikistan. January was wetter than normal in central Europe, European Russia, Greece, Moldova and Spain. However in Spain it was the driest February in the twenty-first century, and also Germany, Belarus and Hungary received very little precipitation for this month. Spain, Portugal, Hungary, Romania, Ukraine and Moldova was also drier than normal in March, but northern European Russia broke records with wettest month. Turkey was wetter than normal in September, while Moldova was drier. For November the Alps recorded substantial snow amounts with new records in Switzerland, while it was still dry in Moldova. December was very wet in northern European Russia, Finland and southern Turkey, but abnormally dry in Macedonia and Bulgaria. For October, November and December, south Caucasus was extremely dry and in Georgia the snowcover for December was recordlow.
 \section{Measurement network 2018 WENCHE/NILU TO CHANGE} 
 \label{Obs_2018}
@@ -125,10 +125,10 @@ Figure~\ref{fig:indicators_emep} shows various modelled ozone metrics for 2018 w
 
 \begin{figure}[H]
   \centering
-%  \subfigure[maxO3]{\includegraphics[clip=,angle=90,height=5.5cm,viewport=175 58 420 770]{FIGS_STATUS/MAXO3_AprSep_ModObs_emep_EMEP01.pdf}}
-%  \subfigure[SOMO35]{\includegraphics[clip=,angle=90,height=5.5cm,viewport=175 58 420 770]{FIGS_STATUS/SOMO35_ModObs_emep_EMEP01_L20EC.pdf}}
-%  \subfigure[AOT40]{\includegraphics[clip=,angle=90,height=5.5cm,viewport=175 58 420 770]{FIGS_STATUS/AOT40_ModObs_emep_EMEP01_L20EC.pdf}}
-\caption{Model results and observations at EMEP stations (triangles) for mean of daily maximum ozone concentrations (a) ([$ppb$], Apr-Sep), SOMO35 (b) [$ppb.d$] and AOT40 for forests (c) [$ppb.h$]. Only data from measurement sites below 500 m a.s.l. are shown.}
+  \subfigure[maxO3]{\includegraphics[clip=,angle=90,height=5.5cm,viewport=175 58 420 770]{FIGS_STATUS/MAXO3_AprSep_ModObs_emep_EMEP01.pdf}}
+  \subfigure[SOMO35]{\includegraphics[clip=,angle=90,height=5.5cm,viewport=175 58 420 770]{FIGS_STATUS/SOMO35_ModObs_emep_EMEP01_L20EC.pdf}}
+  \subfigure[AOT40]{\includegraphics[clip=,angle=90,height=5.5cm,viewport=175 58 420 770]{FIGS_STATUS/AOT40_ModObs_emep_EMEP01_L20EC.pdf}}
+\caption{Model results and observations at EMEP stations (triangles) for mean of daily maximum ozone concentrations (a) ([$ppb$], Apr-Sep), SOMO35 (b) [$ppb.d$] and AOT40 for forests (c) [$ppb.h$] in 2019. Only data from measurement sites below 500 m a.s.l. are shown.}
 \label{fig:indicators_emep}
 \end{figure}
 
@@ -146,8 +146,8 @@ The Figures ~\ref{fig:indicators_emep} and ~\ref{fig:indicators_airbase} show a)
 These plots indicate good agreement between the modelled and measured ozone metrics in general, although there are indications of a slight underestimation by the model in some areas, most visible for the mean of daily maximum. The number of stations included in EEA's database (Figure~\ref{fig:indicators_airbase}) is, however, so large that it is difficult to see the underlying model fields in some areas.
 
 \begin{figure}[H]
-%  \centering{\includegraphics[clip=,angle=90,height=5.5cm,viewport=175 58 420 770]{FIGS_STATUS/POD1f_ModObs_emep_EMEP01.pdf}}
-\caption{Model results of POD$_1$ for forests [$mmol m^-2$] in 2018}
+  \centering{\includegraphics[clip=,angle=90,height=5.5cm,viewport=175 58 420 770]{FIGS_STATUS/POD1f_ModObs_emep_EMEP01.pdf}}
+\caption{Model results of POD$_1$ for forests [$mmol m^-2$] in 2019}
 \label{fig:indicatorPOD}
 \end{figure}
 
