--- a/report.tex
+++ b/report.tex
@@ -334,7 +334,7 @@
 %%%%%%%%%%%%%%%%% Compile ONLY selected Chapters %%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %\includeonly{acknow}
-%\includeonly{chapterIntro,chapterTrendsSandN,chapterEMEPModelUpdates,chapterAPPX_EMIS_trends}
+%\includeonly{chapterEmis2019,chapterTrendsSandN,chapterEMEPModelUpdates}
 
 
 %Please:if you use includeonly on overleaf, just do it temporary and set it back after you have compiled (since others will only see 'your chapter')
@@ -386,7 +386,7 @@
 \renewcommand{\thetable}{\Alph{chapter}:\arabic{table}}
 
 \include{chapterAPPX_EMIS_2019}
-%\include{chapterAPPX_EMIS_trends}
+\include{chapterAPPX_EMIS_trends}
 \include{chapterAPPX_SR_2019}
 \include{chapterAPPX_CountryRep}
 \include{chapterAPPX_ModelEval}
