--- a/chapterAPPX_EMIS_trends.tex
+++ b/chapterAPPX_EMIS_trends.tex
@@ -26,7 +26,7 @@ Natural marine emissions of dimethyl sulphid (DMS) are calculated dynamically du
 
 \sox emissions from passive degassing of Italian volcanoes (Etna,
 Stromboli and Vulcano) are those reported by
-Italy. \sox and PM emissions from volcanic eruptions of Icelandic volcanoes in the period 2000--2018 (Eyjafjallaj\"okull in 2010, Gr{\'{\i}}msv{\"{o}}tn in 2011  and  Bar\dh{}arbunga in 2014-2015) are reported by Iceland.  \\
+Italy. \sox and PM emissions from volcanic eruptions of Icelandic volcanoes in the period 2000-2019 (Eyjafjallaj\"okull in 2010, Gr{\'{\i}}msv{\"{o}}tn in 2011  and  Bar\dh{}arbunga in 2014-2015) are reported by Iceland.  \\
 
 
 \noindent Note that emissions in this appendix are given in different
