Update on Overleaf.

--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -14,6 +14,13 @@ In order to review the progress made towards achieving the environmental and hea
 
 In this chapter, we s
 
+*Domain is basically western Europe, no EECCA
+*That we look from 2000 to get sign trends, not 2005
+
+*The N-question
+*That we look at OC/EC for the first time
+*Chemical composition?
+*Exceedances of Cls
 
 \section{\label{EMEPmodelcalc}{Setup for EMEP MSC-W model calculations}}
 The EMEP MSC-W model version rv4.42 has been used for the all the model runs for years 2000 to 2019. The horizontal resolution is \resZO, with 20 vertical layers (the lowest with a height of approximately 50 meters).
