--- a/chapterStatus2019.tex
+++ b/chapterStatus2019.tex
@@ -160,6 +160,15 @@ AOT40 and POD$_1$ are indicators for effects on vegetation. UNECE's critical lev
 
 On the contrary, POD$_1$ takes into account this soil moisture deficit, giving an estimate of the actual flux of ozone into the plants. It is interesting to see the substantial difference in the geographical pattern of AOT40 and POD$_1$ in Figures~\ref{fig:indicators_emep} (c) and \ref{fig:indicatorPOD}. Whereas AOT40 shows a north-south gradient with peak values over southern/central parts of the continent, POD$_1$ is highest along the coast and shows a minimum in central parts of Europe just where high values of AOT40 are seen. This reflects the importance of the soil moisture effect for these two metrics for ozone damage to vegetation. For POD$_1$ the limit value depends on the species and Mills et al (2011) give a value of 4 mmol m$^{-2}$ for birch and beech and 8 mmol m$^{-2}$ for Norway spruce. The results in Figures~\ref{fig:indicators_emep} (c) and \ref{fig:indicatorPOD} indicate that both these limit values were exceeded in most of Europe. The modelled levels of POD$_1$ could, however, not be validated by observations. 
 
+
+\begin{figure}[H]
+  \centering{\includegraphics[clip=,angle=90,height=5.5cm,viewport=175 58 420 770]{FIGS_/POD1f_ModObs_emep_EMEP01.pdf}}
+\caption{Model results of POD$_1$ for forests [$mmol m^-2$] in 2019}
+\label{fig:indicatorPOD}
+\end{figure}
+
+
+
 A more detailed comparison between model and measurements for ozone for the year 2018 can be found in \cite{WEB2020:O3}.
 
 
