Update on Overleaf.

--- a/chapterStatus2019.tex
+++ b/chapterStatus2019.tex
@@ -162,7 +162,7 @@ On the contrary, POD$_1$ takes into account this soil moisture deficit, giving a
 
 
 \begin{figure}[H]
-  \centering{\includegraphics[clip=,angle=90,height=5.5cm,viewport=175 58 420 770]{FIGS_O3/POD1f_ModObs_emep_EMEP01.pdf}}
+  \centering{\includegraphics[clip=,angle=90,height=5.5cm,viewport=175 58 420 770]{FIGS_O3/20190628_MAXO3_ModObs_emep_H500.pdf}/POD1f_ModObs_emep_EMEP01.pdf}
 \caption{Model results of POD$_1$ for forests [$mmol m^-2$] in 2019}
 \label{fig:indicatorPOD}
 \end{figure}
