Fixed some entries

--- a/NILU.bib
+++ b/NILU.bib
@@ -5,8 +5,8 @@ journal = {Geophysical Research Letters},
 volume = {46},
 number = {21},
 pages = {12537-12546},
-year = {2019}
-doi = {10.1029/2019GL084601},
+year = {2019},
+doi = {10.1029/2019GL084601}
 }
 
 @article{Colette_2015,
@@ -43,7 +43,7 @@ volume = {n/a},
 number = {n/a},
 pages = {},
 year = {2020},
-doi = {10.1002/joc.6582},
+doi = {10.1002/joc.6582}
 }
 
 @article{Johansson2020,
@@ -266,6 +266,7 @@ NUMBER = {16},
 PAGES = {7963--7978},
 URL = {https://acp.copernicus.org/articles/10/7963/2010/},
 DOI = {10.5194/acp-10-7963-2010}
+}
 
 
 
@@ -311,11 +312,12 @@ DOI = {10.5194/acp-19-379-2019}
 
 
 @TECHREPORT{Colette2021,
-AUTHOR = {Colette, A. and Solberg, S. and Aas, W. and and Walker, S.-E.}
-institution = {European Topic Centre on Air pollution, transport, noise and industrial pollution, , Kjeller, Norway}
-TITLE = {Understanding Air Quality Trends in Europe, Focus on the relative contribution of changes in emission of activity sectors, natural fraction and meteorological variability} 
-number = {EIONET report ETC/ATNI 2020/8}.
+AUTHOR = {Colette, A. and Solberg, S. and Aas, W. and and Walker, S.-E.},
+institution = {European Topic Centre on Air pollution, transport, noise and industrial pollution, , Kjeller, Norway},
+TITLE = {Understanding Air Quality Trends in Europe, Focus on the relative contribution of changes in emission of activity sectors, natural fraction and meteorological variability},
+number = {EIONET report ETC/ATNI 2020/8},
 year = {2021}
+}
 
 
 @Article{Banzhaf2015,
