--- a/chapterStatus2019.tex
+++ b/chapterStatus2019.tex
@@ -162,11 +162,17 @@ On the contrary, POD$_1$ takes into account this soil moisture deficit, giving a
 
 
 \begin{figure}[H]
-  \centering{\includegraphics[clip=,angle=90,height=5.5cm,viewport=175 58 420 770]{FIGS_O3/20190628_MAXO3_ModObs_emep_H500.pdf}/POD1f_ModObs_emep_EMEP01.pdf}
-\caption{Model results of POD$_1$ for forests [$mmol m^-2$] in 2019}
-\label{fig:indicatorPOD}
+  \centering{\includegraphics[clip=,angle=90,height=5.5cm,viewport=175 58 425 770]{FIGS_O3/20190628_MAXO3_ModObs_emep_H500.pdf}}
+\caption{Modelled and measured daily max ozone [ppb] 28 June 2019.}
+\label{fig:O3_20190628}
 \end{figure}
 
+
+\begin{figure}[H]
+  \centering{\includegraphics[clip=,angle=90,height=5.5cm,viewport=175 58 425 770]{FIGS_O3/20190725_MAXO3_ModObs_emep_H500.pdf}}
+\caption{Modelled and measured daily max ozone [ppb] 25 July 2019.}
+\label{fig:O3_20190725}
+\end{figure}
 
 
 A more detailed comparison between model and measurements for ozone for the year 2018 can be found in \cite{WEB2020:O3}.
@@ -327,65 +333,6 @@ In Figure \ref{wdeps} wet depositions of nitrogen and sulphur compounds are comp
  \caption{Modelled wet deposition of sulphur and nitrogen [mg(S)m$^{-2}$, mg(N)m$^{-2}$] in 2019, with EMEP observations on top (marked by triangles).}
 \label{wdeps}
 \end{figure}
-\subsection{Exceedances of critical loads of acidification and eutrophication.}
-\label{subs:exceedSnN}
-%Thomas/CCE: I just updated this section. Please have a look TS 17.08.2021
-
-The exceedances of European critical loads (CLs) are computed for the total nitrogen
-(N) and sulphur (S) depositions modelled on the 0.1$\degrees \times$ 0.1$\degrees$
-longitude-latitude grid (approx. 11 x 5.5 km$^{2}$ at 60$\degrees$N).
-Exceedances are calculated for the European critical loads documented in \cite{Hettelingh:2017}, while
-a description of the methods is given in \cite{DeVries:2015}. The
-critical loads data for eutrophication by N (CL eut N) and for acidification by N and S
-(CL acid) are also used by the EMEP Centre CIAM (located at IIASA) in their integrated assessment
-modelling. The exceedance in a grid cell is the so-called ’average accumulated
-exceedance’ (AAE), which is calculated as the area-weighted average of the
-exceedances of the critical loads of all ecosystems in this grid cell. The units for
-critical loads and their exceedances are equivalents (eq; same as \textit{moles of charge},
-molc) per area and time, making S and N depositions comparable on their impacts, which is important for
-acidity CLs.
-
-Critical loads are available for about 4 million ecosystems in Europe covering an area
-of about 3 million km$^{2}$ (west of 42$\degrees$E). The exceedances (AAE) of those critical loads
-are computed on a 0.1$\degrees \times$ 0.1$\degrees$ longitude-latitude grid, and maps for the deposition in
-the years 2000, 2005, 2010, 2015 and 2019 are shown in Figures \ref{fig:eutN} and \ref{fig:acid}. As indicated in the maps, the critical loads for eutrophication are exceeded in practically all countries in all years. The share of ecosystems where the critical load for eutrophication is exceeded decreases relatively slowly, starting at 76.4\% in 2000 and ending at 65.5\% in 2019.
-European average AAE is about 452 eq ha$^{-1}$ yr$^{-1}$ (2000) and 276 eq
-ha$^{-1}$ yr$^{-1}$ (2019). The highest exceedances of CLs are found in the Po Valley in Italy, the
-Dutch-German-Danish border areas and in north-eastern Spain.
-By contrast, critical loads of acidity are exceeded in a much smaller area. Hot spots of
-exceedances can be found in the Netherlands and its border areas to Germany and
-Belgium, and some smaller maxima in southern Germany and Czechia,
-whereas most of Europe is not exceeded (grey areas). Acidity exceedances occur
-on 16.2\% (2000) and 5.0\% (2019) of the ecosystem area and the European average
-AAE is about 133 eq ha$^{-1}$ yr$^{-1}$ (2000) and 25 eq ha$^{-1}$ yr$^{-1}$ (2019). Overall statistics for the share of critical load exceedance and European average of AAE are shown in Figures \ref{fig:stats_cl_ex}.
-\begin{figure}[ht]
-  \centering
-  \subfigure{\includegraphics*[scale=0.20]{FIGS_CL_Exceedance/Stats_CLex_eut.png}}
-  \subfigure{\includegraphics*[scale=0.20]{FIGS_CL_Exceedance/Stats_CLex_acid.png}}
-  \caption{Summary for exceedance of critical load for eutrophication (left) and acidification (right).}
-\label{fig:stats_cl_ex}
-\end{figure}
-\begin{figure}[ht]
-  \centering
-  \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_eut_2000.png}}
-  \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_eut_2005.png}}
-  \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_eut_2010.png}}
-  \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_eut_2015.png}}
-  \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_eut_2019.png}}
- \caption{Exceedance of critical load for eutrophication for the years 2000, 2005, 2010, 2015 and 2019.}
-\label{fig:eutN}
-\end{figure}
-\begin{figure}[ht]
-  \centering
- \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_acid_2000.png}}
-  \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_acid_2005.png}}
-  \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_acid_2010.png}}
-  \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_acid_2015.png}}
-  \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_acid_2019.png}}
- \caption{Exceedance of critical load for acidification for the years 2000, 2005, 2010, 2015 and 2019.}
-\label{fig:acid}
-\end{figure}
-
 
 \clearpage
 \bibliographystyle{copernicus}         % change bibliography-name after each
