--- a/chapterEMEPModelUpdates.tex
+++ b/chapterEMEPModelUpdates.tex
@@ -23,7 +23,9 @@ more detail in Sects.~\ref{sec:updateOverview}-\ref{sec:updateOther}.
 
 %Versions:
 %
+%  rv4.36 - open source November 2020
 %  rv4.35 used  for R2020
+%  rv4.34 - open source January 2020
 %  rv4.33 used  for R2019
 %  rv4.33 - open source June 2019
 %  rv4.32 used for EMEP course, April 2019
@@ -474,12 +476,12 @@ A number of smaller changes have been made:
 \begin{description}
   \item[fracPM25] A fraction of coarse nitrate particulate mass has been allocated to the \PM[2.5] fraction in order to represent the fact that some of the particles from the coarse fraction have diameters of less than 2.5~\um. The value of this fraction was previously 27\% \citep{Simpson:EMEP2012}. In the latest version this fraction was reduced to 13\%, in order to better account for the differences between mass-median and aerodynamic diameters.
   \item[IAM\_CROP] A new generic crop type has been introduced for integrated assessment modelling outputs. This is an updated version of the previously used IAM\_CR species \citep{Simpson:EMEP2012}, in which the phenology factor (\fphen) has been set to 1.0 across the ozone flux accumulation period. (The IAM\_CR parameters gave a reduction in \fphen towards the end of the period.)
+  \item[Pollen emissions] Optional birch, olive, ragweed and grass pollen emissions based on \citet{Sofiev-2015,Sofiev-2017}.
 \end{description}
 
 
 revised wet-radius calculations --Dave
 
-Something on pollen perhaps? -- Alvaro??
 
 
 
