--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -6,11 +6,10 @@
 \old{TODO}
 
 \section{\label{sec:Trends_introduction}Introduction and background}
-At its thirty-ninth session (Geneva, 9–13 December 2019), the Executive Body launched the review of the Protocol to Abate Acidification, Eutrophication and Ground-level Ozone (the Gothenburg Protocol), as amended, and, in its decision 2020/2, requested subsidiary bodies to consider the tasks contained in annex I to document ECE/EB.AIR/2020/3-ECE/EB.AIR/WG.5/2020/3 entitled Preparations for the review of the Protocol to Abate Acidification, Eutrophication and Ground-level Ozone as amended in 2012.
+At its thirty-ninth session (Geneva, 9–13 December 2019), the Executive Body launched the review of the Protocol to Abate Acidification, Eutrophication and Ground-level Ozone (the Gothenburg Protocol) as amended in 2012.
 
-In the context of the review of the amended Gothenburg Protocol, a list of questions was given to the subsidiary bodies of the Air Convention.
-
-In order to review the progress made towards achieving the environmental and health objectives of the Protocol, ....
+In order to review the progress made towards achieving the environmental and health objectives of the Protocol, a
+list of questions was given to the subsidiary bodies of the Air Convention.
 
 In this chapter, we s
 
@@ -535,9 +534,72 @@ For the period 2005-2019 (starting from the reference year of Gothenburg Protoco
 	\caption{\label{fig:O3_somo35trends}Trends in SOMO35 from 2000-2019 for EMEP observations and model for sites north (left) and south (right) of 49 N: The solid line indicates the mean, and the shaded area marks the 25 and 75 percentile. Only sites below 1200 m asl and with at least 15 years of data are included.}
 \end{figure}
 
+\section{Exceedances of critical loads of acidification and eutrophication in 2000 to 2019.}
+\label{subs:exceedSnN}
+%Thomas/CCE: I just updated this section. Please have a look TS 17.08.2021
+
+The exceedances of European critical loads (CLs) are computed for the total nitrogen
+(N) and sulphur (S) depositions modelled on the 0.1$\degrees \times$ 0.1$\degrees$
+longitude-latitude grid (approx. 11 x 5.5 km$^{2}$ at 60$\degrees$N).
+Exceedances are calculated for the European critical loads documented in \cite{Hettelingh:2017}, while
+a description of the methods is given in \cite{DeVries:2015}. The
+critical loads data for eutrophication by N (CL eut N) and for acidification by N and S
+(CL acid) are also used by the EMEP Centre CIAM (located at IIASA) in their integrated assessment
+modelling. The exceedance in a grid cell is the so-called ’average accumulated
+exceedance’ (AAE), which is calculated as the area-weighted average of the
+exceedances of the critical loads of all ecosystems in this grid cell. The units for
+critical loads and their exceedances are equivalents (eq; same as \textit{moles of charge},
+molc) per area and time, making S and N depositions comparable on their impacts, which is important for
+acidity CLs.
+
+Critical loads are available for about 4 million ecosystems in Europe covering an area
+of about 3 million km$^{2}$ (west of 42$\degrees$E). The exceedances (AAE) of those critical loads
+are computed on a 0.1$\degrees \times$ 0.1$\degrees$ longitude-latitude grid, and maps for the deposition in
+the years 2000, 2005, 2010, 2015 and 2019 are shown in Figures \ref{fig:eutN} and \ref{fig:acid}. As indicated in the maps, the critical loads for eutrophication are exceeded in practically all countries in all years. The share of ecosystems where the critical load for eutrophication is exceeded decreases relatively slowly, starting at 76.4\% in 2000 and ending at 65.5\% in 2019.
+European average AAE is about 452 eq ha$^{-1}$ yr$^{-1}$ (2000) and 276 eq
+ha$^{-1}$ yr$^{-1}$ (2019). The highest exceedances of CLs are found in the Po Valley in Italy, the
+Dutch-German-Danish border areas and in north-eastern Spain.
+By contrast, critical loads of acidity are exceeded in a much smaller area. Hot spots of
+exceedances can be found in the Netherlands and its border areas to Germany and
+Belgium, and some smaller maxima in southern Germany and Czechia,
+whereas most of Europe is not exceeded (grey areas). Acidity exceedances occur
+on 16.2\% (2000) and 5.0\% (2019) of the ecosystem area and the European average
+AAE is about 133 eq ha$^{-1}$ yr$^{-1}$ (2000) and 25 eq ha$^{-1}$ yr$^{-1}$ (2019). Overall statistics for the share of critical load exceedance and European average of AAE are shown in Figures \ref{fig:stats_cl_ex}.
+\begin{figure}[ht]
+  \centering
+  \subfigure{\includegraphics*[scale=0.20]{FIGS_CL_Exceedance/Stats_CLex_eut.png}}
+  \subfigure{\includegraphics*[scale=0.20]{FIGS_CL_Exceedance/Stats_CLex_acid.png}}
+  \caption{Summary for exceedance of critical load for eutrophication (left) and acidification (right).}
+\label{fig:stats_cl_ex}
+\end{figure}
+\begin{figure}[ht]
+  \centering
+  \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_eut_2000.png}}
+  \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_eut_2005.png}}
+  \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_eut_2010.png}}
+  \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_eut_2015.png}}
+  \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_eut_2019.png}}
+ \caption{Exceedance of critical load for eutrophication for the years 2000, 2005, 2010, 2015 and 2019.}
+\label{fig:eutN}
+\end{figure}
+\begin{figure}[ht]
+  \centering
+ \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_acid_2000.png}}
+  \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_acid_2005.png}}
+  \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_acid_2010.png}}
+  \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_acid_2015.png}}
+  \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_acid_2019.png}}
+ \caption{Exceedance of critical load for acidification for the years 2000, 2005, 2010, 2015 and 2019.}
+\label{fig:acid}
+\end{figure}
+
+
+
+
+
 
 \clearpage
 \bibliographystyle{copernicus}         % change bibliography-name after each
 \renewcommand\bibname{References}      % bibliographystyle command!
 \addcontentsline{toc}{section}{References}
-\bibliography{trends,Refs,EMEP_Reports,NILU}
+\bibliography{trends,Refs,EMEP_Reports,NILU,RefsUpdates}
