--- a/NILU.bib
+++ b/NILU.bib
@@ -162,6 +162,22 @@ PAGES = {13339--13357},
 URL = {https://www.atmos-chem-phys.net/11/13339/2011/},
 DOI = {10.5194/acp-11-13339-2011}
 }
+@Article{Yttri2019,
+  author    = {Yttri, Karl Espen and Simpson, David and Bergstrom, Robert and Kiss, Gyula and Szidat, Sonke and Ceburnis, Darius and Eckhardt, Sabine and Hueglin, Christoph and Nojgaard, Jacob Kleno and Perrino, Cinzia and Pisso, Ignazio and Prevot, Andre Stephan Henry and Putaud, Jean-Philippe and Spindler, Gerald and Vana, Milan and Zhang, Yan-Lin and Aas, Wenche},
+  title     = {{The EMEP Intensive Measurement Period campaign, 2008-2009: characterizing carbonaceous aerosol at nine rural sites in Europe}},
+  journal   = acp,
+  year      = {2019},
+  volume    = {19},
+  number    = {7},
+  pages     = {4211-4233},
+  month     = {APR 3},
+  issn      = {1680-7316},
+ doi       = {10.5194/acp-19-4211-2019},
+  eissn     = {1680-7324},
+  unique-id = {ISI:000463364000004},
+}
+
+
 
 @Article{Hoerger2015,
 AUTHOR = {Hoerger, C. C. and Claude, A. and Plass-Duelmer, C. and Reimann, S. and Eckart, E. and Steinbrecher, R. and Aalto, J. and Arduini, J. and Bonnaire, N. and Cape, J. N. and Colomb, A. and Connolly, R. and Diskova, J. and Dumitrean, P. and Ehlers, C. and Gros, V. and Hakola, H. and Hill, M. and Hopkins, J. R. and J\"ager, J. and Junek, R. and Kajos, M. K. and Klemp, D. and Leuchner, M. and Lewis, A. C. and Locoge, N. and Maione, M. and Martin, D. and Michl, K. and Nemitz, E. and O'Doherty, S. and P\'erez Ballesta, P. and Ruuskanen, T. M. and Sauvage, S. and Schmidbauer, N. and Spain, T. G. and Straube, E. and Vana, M. and Vollmer, M. K. and Wegener, R. and Wenger, A.},
