--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -11,7 +11,9 @@ At its thirty-ninth session (Geneva, 9–13 December 2019), the Executive Body l
 In order to review the progress made towards achieving the environmental and health objectives of the Protocol, a
 list of questions was given to the subsidiary bodies of the Air Convention.
 
-In this chapter, we s
+Several of the questions were related to the trends of air pollution in Europe, and to what extent they follow the reported trends in emissions
+
+In this chapter, we present an assessment of the trends in air pollution in Europe for the period 2000-2019
 
 *Domain is basically western Europe, no EECCA
 *That we look from 2000 to get sign trends, not 2005
@@ -73,11 +75,9 @@ In order to allow for consistent comparisons, the trend is provided as a relativ
 
 \section{\label{sec:Trends_sulfur}Trends in sulfur}
 
-Figure~\ref{fig:SOx_trends} shows an overview of the annual and seasonal trends in oxidised sulfur compounds from 2000 to 2019, while the statistics of the average trends are given in the Tables ~\ref{tab:so2_stat},~\ref{tab:so4pm_stat} and ~\ref{tab:so4dep_stat}.
+The SO$_x$ emissions has declined by more than 80\% in Europe the last two decades, and the the observed and modelled trends in all the atmospheric sulfur components show a substantial decrease (Figure~\ref{fig:SOx_trends} and ~\ref{tab:so2_stat} - ~\ref{tab:so4dep_stat}), in line with several studies of trends the latter years (\cite{aas2019global, Colette2012, Vivanco2018, Theobald2019, Colette2021, Banzhaf2015, torseth2012, Crippa2016}).
 
-The sulfur trends show a clear decrease during the last decades, as documented by several, inline with the regional and national emission reduction strategies (\cite{aas2019global, Colette2012, Vivanco2018, Theobald2019, Colette2021, Banzhaf2015, torseth2012, Crippa2016}).
-
-On average the reductions in observations for the last 20 years (2000-2019) are -3.6, -3.0 and -2.9  \% yr$_{-1}$ for \soii, \soiv in aerosols and in wet deposition respectively, while the trends in model calculations are somewhat higher: -4.9, -3.6 and -4.0 \% yr$_{-1}$, respectively. The overestimation in sulfur trends by the model is seen both for relative and absolute trends for \soii, and wet deposition of \soiv while for \soiv in aerosols the trend is higher in observations but withing the confidence interval to the modelled trends. 
+On average the reductions in observations for the last 20 years (2000-2019) are -3.6, -3.0 and -2.9  \% yr$_{-1}$ for \soii, \soiv in aerosols and in wet deposition respectively, while the trends in model calculations are somewhat higher: -4.9, -3.6 and -4.0 \% yr$_{-1}$, respectively. The overestimation in sulfur trends by the model is seen both for relative and absolute trends for \soii, and wet deposition of \soiv while for \soiv in aerosols the trend is higher in observations but within the confidence interval to the modelled trends. 
 
 
 
@@ -93,7 +93,7 @@ The  greater decrease in \soii compared to secondary sulphate is due to a combin
 \end{figure}
 
 \begin{table}
-\caption{\label{tab:so2_stat} Average absolute and relative changes in \soii concentrations}
+\caption{\label{tab:so2_stat} Average absolute and relative changes in \soii concentrations for different periods in 2000-2019, annual and seasonal trends}
 \begin{center}
 \scalebox{0.65}{%
 \begin{tabular}{ll|ccc|cccc|cccc}
@@ -101,21 +101,22 @@ The  greater decrease in \soii compared to secondary sulphate is due to a combin
           &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Average change per year (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative change per year (\% $yr^{-1}$)} \\
 Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                    obs. &          conf.interval &  mod. &          conf.interval &                     obs. &         conf.interval &  mod. &        conf.interval \\
 \midrule
-2000-2019 & all &              47 &          45 &          47 &                  -0.069 &  (-0.086, -0.051) & -0.088 &  (-0.109, -0.067) &                    -3.90 &  (-4.26, -3.55) & -5.08 &  (-5.38, -4.78) \\
-          & winter &              49 &          44 &          48 &                  -0.103 &  (-0.129, -0.077) & -0.124 &  (-0.153, -0.095) &                    -4.10 &  (-4.38, -3.81) & -4.91 &   (-5.2, -4.62) \\
-          & spring &              47 &          44 &          47 &                  -0.071 &  (-0.088, -0.054) & -0.081 &   (-0.101, -0.06) &                    -4.17 &  (-4.47, -3.86) & -5.06 &  (-5.32, -4.79) \\
-          & summer &              47 &          32 &          47 &                  -0.043 &  (-0.058, -0.029) & -0.060 &  (-0.079, -0.041) &                    -2.99 &  (-3.58, -2.41) & -4.92 &  (-5.29, -4.54) \\
-          & autumn &              47 &          35 &          46 &                  -0.052 &  (-0.067, -0.036) & -0.086 &  (-0.108, -0.064) &                    -3.59 &  (-3.99, -3.19) & -4.99 &  (-5.28, -4.71) \\
-2005-2019 & all &              56 &          40 &          52 &                  -0.055 &  (-0.068, -0.041) & -0.067 &   (-0.084, -0.05) &                    -4.28 &  (-4.73, -3.83) & -5.21 &  (-5.55, -4.87) \\
-2010-2019 & all &              59 &          35 &          42 &                  -0.050 &  (-0.063, -0.037) & -0.057 &  (-0.073, -0.041) &                    -4.79 &  (-5.93, -3.64) & -6.36 &  (-7.13, -5.58) \\
-2000-2010 & all &              65 &          30 &          56 &                  -0.080 &  (-0.104, -0.055) & -0.116 &  (-0.142, -0.091) &                    -3.55 &  (-4.35, -2.74) & -5.35 &   (-5.9, -4.79) \\
+2000-2019 & all &              48 &          46 &          48 &                  -0.068 &  (-0.085, -0.051) & -0.087 &  (-0.108, -0.067) &                    -3.88 &  (-4.23, -3.53) & -5.09 &  (-5.38, -4.79) \\
+          & winter &              50 &          45 &          49 &                  -0.102 &  (-0.127, -0.076) & -0.123 &  (-0.152, -0.095) &                    -4.08 &   (-4.36, -3.8) & -4.92 &   (-5.2, -4.63) \\
+          & spring &              48 &          45 &          48 &                  -0.070 &  (-0.086, -0.053) & -0.080 &     (-0.1, -0.06) &                    -4.15 &  (-4.45, -3.85) & -5.06 &   (-5.32, -4.8) \\
+          & summer &              48 &          33 &          48 &                  -0.043 &  (-0.057, -0.029) & -0.060 &  (-0.078, -0.041) &                    -3.01 &  (-3.59, -2.43) & -4.93 &  (-5.29, -4.56) \\
+          & autumn &              48 &          36 &          47 &                  -0.051 &  (-0.066, -0.035) & -0.085 &  (-0.106, -0.063) &                    -3.55 &  (-3.94, -3.15) & -5.00 &  (-5.28, -4.72) \\
+2005-2019 & all &              57 &          41 &          53 &                  -0.055 &  (-0.068, -0.041) & -0.066 &   (-0.083, -0.05) &                    -4.27 &  (-4.72, -3.83) & -5.24 &   (-5.58, -4.9) \\
+2010-2019 & all &              60 &          36 &          43 &                  -0.050 &  (-0.062, -0.037) & -0.056 &  (-0.072, -0.041) &                    -4.81 &  (-5.94, -3.69) & -6.38 &  (-7.14, -5.62) \\
+2000-2010 & all &              66 &          30 &          57 &                  -0.079 &  (-0.103, -0.054) & -0.116 &  (-0.141, -0.091) &                    -3.52 &  (-4.31, -2.73) & -5.36 &  (-5.91, -4.81) \\
+
 \bottomrule
 \end{tabular}}
 \end{center}
 \end{table}
 
 \begin{table}
-\caption{\label{tab:so4pm_stat} Average absolute and relative changes in \soiv concentrations in aerosols}
+\caption{\label{tab:so4pm_stat} Average absolute and relative changes in \soiv concentrations in aerosols for different periods in 2000-2019, annual and seasonal trends}
 \begin{center}
 \scalebox{0.65}{%
 \begin{tabular}{ll|ccc|cccc|cccc}
@@ -137,12 +138,12 @@ Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                
 \end{table}
 
 \begin{table}
-\caption{\label{tab:so4dep_stat} Average absolute and relative changes in wet deposition of sulfate}
+\caption{\label{tab:so4dep_stat} Average absolute and relative changes in wet deposition of sulfate for different periods in 2000-2019, annual and seasonal trends}
 \begin{center}
 \scalebox{0.65}{%
 \begin{tabular}{ll|ccc|cccc|cccc}
 \toprule
-          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Average change per year (mg $mm^{2} yr^{-1}$)} & \multicolumn{4}{c}{Relative change per year (\% $yr^{-1}$)} \\
+          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Average change per year (\ug $m^{2} yr^{-1}$)} & \multicolumn{4}{c}{Relative change per year (\% $yr^{-1}$)} \\
 Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                    obs. &          conf.interval &  mod. &          conf.interval &                     obs. &         conf.interval &  mod. &        conf.interval \\
 \midrule
 2000-2019 & all &              49 &          40 &          48 &                   -29.5 &  (-34.8, -24.2) & -43.8 &  (-52.4, -35.1) &                    -3.14 &  (-3.46, -2.82) & -4.09 &  (-4.35, -3.83) \\
