--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -75,10 +75,9 @@ In order to allow for consistent comparisons, the trend is provided as a relativ
 
 \section{\label{sec:Trends_sulfur}Trends in sulfur}
 
-The SO$_x$ emissions has declined by more than 80\% in Europe the last two decades, and the the observed and modelled trends in all the atmospheric sulfur components show a substantial decrease (Figure~\ref{fig:SOx_trends} and ~\ref{tab:so2_stat} - ~\ref{tab:so4dep_stat}), in line with several studies of trends the latter years (\cite{aas2019global, Colette2012, Vivanco2018, Theobald2019, Colette2021, Banzhaf2015, torseth2012, Crippa2016}).
+The SO$_x$ emissions has declined by more than 80\% in Europe the last two decades, and both the observed and modelled trends for all the atmospheric sulfur components show a substantial decrease (Figure~\ref{fig:SOx_trends} and ~\ref{tab:so2_stat} - ~\ref{tab:so4dep_stat}), in line with several studies on trends the latter years (\cite{aas2019global, Colette2012, Vivanco2018, Theobald2019, Colette2021, Banzhaf2015, torseth2012, Crippa2016}).
 
-On average the reductions in observations for the last 20 years (2000-2019) are -3.6, -3.0 and -2.9  \% yr$_{-1}$ for \soii, \soiv in aerosols and in wet deposition respectively, while the trends in model calculations are somewhat higher: -4.9, -3.6 and -4.0 \% yr$_{-1}$, respectively. The overestimation in sulfur trends by the model is seen both for relative and absolute trends for \soii, and wet deposition of \soiv while for \soiv in aerosols the trend is higher in observations but within the confidence interval to the modelled trends. 
-
+On average the reductions in observations for the last 20 years (2000-2019) are -3.6, -3.0 and -2.9  \% yr$^{-1}$ for \soii, \soiv in aerosols and in wet deposition respectively, while the trends in model calculations are somewhat higher: -4.9, -3.6 and -4.0 \% yr$^{-1}$, respectively. The overestimation in sulfur trends by the model is seen both for relative and absolute trends for \soii, and wet deposition of \soiv while for \soiv in aerosols the trend is higher in observations but within the confidence interval to the modelled trends. 
 
 
 The  greater decrease in \soii compared to secondary sulphate is due to a combination of higher oxidation rate (hence more \soii converted to \soiv) and increased dry deposition rate of \soii. The oxidation capacity of the atmosphere have increased as the emissions have decreased \cite{Dalsoren2016}, and the clouds have become less acidic due to less \soii and only slightly decrease in \nhiii, which has increased the oxidation rate of \soii to \soiv via the ozone pathway (\cite{Banzhaf2015, Redington2009}). In addition, less acidity in the environment probably leads to more efficient dry deposition of \soii (\cite{Fowler_et_al:2009}) 
@@ -188,7 +187,7 @@ In summary we find that oxidized nitrogen in air and precipitation has been decr
 
 
 \begin{table}
-\caption{\label{tab:no2_stat} Average absolute and relative changes in \noii concentrations}
+\caption{\label{tab:no2_stat} Average absolute and relative changes in \noii concentrations }
 \begin{center}
 \scalebox{0.65}{%
 \begin{tabular}{ll|ccc|cccc|cccc}
@@ -283,7 +282,7 @@ Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                
 \scalebox{0.7}{%
 \begin{tabular}{ll|ccc|cccc|cccc}
 \toprule
-          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Average change per year (mg $mm^{2} yr^{-1}$)} & \multicolumn{4}{c}{Relative change per year (\% $yr^{-1}$)} \\
+          &        & \multicolumn{3}{c}{Number of sites} & \multicolumn{4}{c}{Average change per year (\ugN $m^{2} yr^{-1}$)} & \multicolumn{4}{c}{Relative change per year (\% $yr^{-1}$)} \\
 Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                    obs. &          conf.interval &  mod. &          conf.interval &                     obs. &         conf.interval &  mod. &        conf.interval \\
 \midrule
 2000-2019 & all &              46 &          21 &          41 &                   -12.1 &   (-15.7, -8.5) & -24.3 &  (-29.3, -19.4) &                    -1.36 &    (-1.74, -0.98) & -2.08 &  (-2.22, -1.94) \\
