--- a/report.tex
+++ b/report.tex
@@ -369,6 +369,7 @@
 
 \include{chapterTrendsSandN} %Wenche, Hilde, Svetlana (Jonas/Augustin about how the trends have been calculated)
 %\include{chapterTrendsOzone} %Sverre, David, Joffen
+\include{chapterTrendsECOC} % KE, Dave, ...
 %\include{chapterTrendsOCandSIA} %Karl-Espen, David
 
 \part{Technical EMEP Developments}
